# BenzoApp

./: .env.example  .geminiignore  .gitattributes  .gitignore  .mypy.ini  .pytest.ini  .rooignore  .ruff.toml  .uv.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  PROJECT_DOC.md  README.md  TODOLIST.md  _main.py  agent.md  biome.json  frontend_analysis_report.md  gemini.md  git_diff.bat  git_diff.sh  index.html  init_instruction.sh  jsconfig.json  main.py  map_test.html  package.json  playwright.config.ts  pyproject.toml  run.bat  styles.css  temp_user_en.html  test.py  tsconfig.json
.clinerules/: py.instructions.md
.github/: copilot-instructions.md  pull_request_template.md
.roo/: general.md
backlog/: config.yml
data/: index.js
docs/: Fix BenzoApp Translation, Layout, and UI Issues.md  architecture.md  deployment-checklist.md  frontend-code-review.md  testing-guide.md  user-en.md  user-it.md
plans/: M25_plan.md  accessibility_implementation_summary.md  accessibility_improvements.md  codebase_issues_report.md  codebase_review_report.md  fix_map_details_collapse.md  fix_recent_searches_styling.md  fix_web_page_issues.md  l.md  layout.md  popup.md  review_design.md  security_vulnerability_assessment.md  smells.md  version2_plan.md  version2_tasks.md
scripts/: __init__.py  check_docs.py  check_sensitive_content.py  color_contrast.py  download_mimit_csvs.py  generate_cities_json.py  install_local_git_hooks.ps1  scan_color_contrast.py
setup/: init_instruction.sh  open_model_folder.sh
src/: main.py  models.py
tests/: __init__.py  conftest.py  global-setup.ts  global-teardown.ts  test_docs_page.py  test_fuel_api.py  test_fuel_type_utils.py  test_geocoding.py  test_geocoding_fallback.py  test_main.py  test_models.py  test_prezzi_csv.py  test_sensitive_scan.py  test_ui_accessibility.py  test_ui_buttons.py
(+120 files in other folders)
