[project]
name = "BenzoApp"
version = "0.1.0"
description = "Fuel service"
requires-python = "==3.14.*"
license = "MIT"
authors = [{ name = "Nic" }]
dependencies = [
  "cachetools",
  "fastapi[standard]",
  "httptools",
  "humanize",
  "loguru",
  "markdown",
  "orjson",
  "pathvalidate",
  "pydantic",
  "pydantic_settings",
  "python-dateutil",
  "python-dotenv",
  "python-multipart",
  "tabulate",
  "tenacity",
  "tzdata",
  "uvicorn[standard]",
  "wrapt",
]

[dependency-groups]
dev = [
  "datamodel-code-generator",
  "httpx",
  "pipgrip",
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-randomly",
  "pytest-sugar",
  "pytest-xdist",
  "types-cachetools",
  "types-python-dateutil",
  "types-tabulate",
  "watchfiles",
]

[tool.uv]
cache-dir = "d:/.uv_cache"
